Closed
Bug 1358185
Opened 9 years ago
Closed 9 years ago
Content incorrectly clipped on fennec on http://www.zpravy.cz/
Categories
(Core :: Layout, defect)
Core
Layout
Tracking
()
RESOLVED
FIXED
mozilla55
People
(Reporter: jnicol, Assigned: jnicol)
References
()
Details
Attachments
(2 files)
|
219 bytes,
text/plain
|
Details | |
|
59 bytes,
text/x-review-board-request
|
mstange
:
review+
gchang
:
approval-mozilla-beta+
|
Details |
On fennec nightly the page http://www.zpravy.cz/ does not display correctly. None of the main content is shown. When scrolling some content becomes temporarily visible then is hidden again.
I have bisected it to this commit:
https://hg.mozilla.org/mozilla-central/rev/5746c9b9db68fc00cce51b6cd873f403e0caaee6
I don't really understand what's going on here, lots of this code is new to me. Markus?
| Assignee | ||
Updated•9 years ago
|
Flags: needinfo?(mstange)
| Assignee | ||
Comment 1•9 years ago
|
||
The reason this affects android and not desktop is because layers.max-active is 20 on android, but is -1 (infinite) on desktop.
| Assignee | ||
Comment 2•9 years ago
|
||
This test case reproduces the problem when layers.max-active is set to 0
| Comment hidden (mozreview-request) |
Comment 4•9 years ago
|
||
| mozreview-review | ||
Comment on attachment 8864198 [details]
Bug 1358185 - Force FixedPosition display items to be active.
https://reviewboard.mozilla.org/r/135862/#review138896
Let's see how long it takes before we notice that this is causing OOM crashes.
In theory, it shouldn't be too hard to apply the clip properly in FrameLayerBuilder even if the item is inactive. But then it would render incorrectly during async scrolling...
Attachment #8864198 -
Flags: review?(mstange) → review+
| Assignee | ||
Comment 5•9 years ago
|
||
> Let's see how long it takes before we notice that this is causing OOM crashes.
Heh :). This might actually help us in some cases. On the site in question we were getting a 2 PaintedLayers per inactive FixedPosition. Because the FixedPositions had a huge clip and a different AGR from the rest of the content, they would finalize the existing PaintedLayerDataNode, then be finalized themselves when the next display item was processed. (I think that's what was going on anyway!)
| Assignee | ||
Comment 6•9 years ago
|
||
Keywords: checkin-needed
Pushed by ryanvm@gmail.com:
https://hg.mozilla.org/integration/autoland/rev/62c41325d17e
Force FixedPosition display items to be active. r=mstange
Keywords: checkin-needed
Comment 8•9 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 9 years ago
status-firefox55:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla55
Comment 9•9 years ago
|
||
this shows a performance improvement:
== Change summary for alert #6348 (as of May 03 2017 19:57 UTC) ==
Improvements:
14% tscrollx summary linux64 opt 5.01 -> 4.31
For up to date results, see: https://treeherder.mozilla.org/perf.html#/alerts?id=6348
| Assignee | ||
Comment 10•9 years ago
|
||
Comment on attachment 8864198 [details]
Bug 1358185 - Force FixedPosition display items to be active.
Approval Request Comment
[Feature/Bug causing the regression]: Bug 1298218
[User impact if declined]: On android some sites will be totally obscured by a background image, instead of the image being clipped to the correct size
[Is this code covered by automated tests?]: No
[Has the fix been verified in Nightly?]: Yes
[Needs manual test from QE? If yes, steps to reproduce]: No
[List of other uplifts needed for the feature/fix]: N/A
[Is the change risky?]: Not particularly
[Why is the change risky/not risky?]: The change makes us take what was already the common code-path all of the time, so is well tested. Layerization changes can occasionally have unforeseen consequences with regards to memory usage, but I believe this change is likely to help decrease usage as described in comment 5.
[String changes made/needed]: N/A
Attachment #8864198 -
Flags: approval-mozilla-beta?
Updated•9 years ago
|
status-firefox54:
--- → affected
Comment 11•9 years ago
|
||
Hi :jnicol,
Is this a regression or it's been there for a while? If it's not a new regression in 54, can we let it ride the train?
Flags: needinfo?(jnicol)
| Assignee | ||
Comment 12•9 years ago
|
||
This is a regression in 54. We shouldn't let 54 ship without this, the content on affected websites will be completely obscured.
Flags: needinfo?(mstange)
Flags: needinfo?(jnicol)
Comment 13•9 years ago
|
||
Comment on attachment 8864198 [details]
Bug 1358185 - Force FixedPosition display items to be active.
Fix a regression. Beta54+. Should be in 54 beta 6.
Attachment #8864198 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Updated•9 years ago
|
Assignee: nobody → jnicol
Comment 14•9 years ago
|
||
| bugherder uplift | ||
You need to log in
before you can comment on or make changes to this bug.
Description
•