Bug 1358185 - Force FixedPosition display items to be active. r=mstange

Fixed backgrounds were not being clipped correctly when rendered using
inactive layers.

MozReview-Commit-ID: 3v8tajr3MoB

--HG--
extra : rebase_source : 25329cb9efb998c64924916d4ea496a439688c8d